Bug 410479 - Missing most menu entries for adding connected widgets to activity diagrams
Summary: Missing most menu entries for adding connected widgets to activity diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-01 10:39 UTC by Ralf Habacker
Modified: 2019-08-01 10:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-01 10:39:55 UTC
For faster adding it would be nice to have additional context menu entries for adding connected widgets in activity diagrams.

STEPS TO REPRODUCE
1. start umbrello
2. add activity diagram and an initial activity
3. select the added activity and open context menu

OBSERVED RESULT
There are no entries for adding activity related widgets expected notes

EXPECTED RESULT
There should be entries for adding activity related widgets
Comment 1 Ralf Habacker 2019-08-01 10:53:12 UTC
Git commit 05bef6103bff6ab161a42813cb983ced6bc9ce43 by Ralf Habacker.
Committed on 01/08/2019 at 10:52.
Pushed by habacker into branch 'master'.

Add missing context menu entries for activity diagrams
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +12   -1    umbrello/menus/listpopupmenu.cpp
M  +13   -0    umbrello/menus/listpopupmenu.h
M  +14   -1    umbrello/menus/umlscenepopupmenu.cpp
M  +19   -0    umbrello/menus/widgetbasepopupmenu.cpp
M  +60   -1    umbrello/umlwidgets/umlwidget.cpp

https://commits.kde.org/umbrello/05bef6103bff6ab161a42813cb983ced6bc9ce43