Add missing context menu entries for activity diagrams

BUG:410479
FIXED-IN:2.29.80 (KDE Applications 19.11.80)